--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-service": "^3.0.4",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "vue-markdown-loader": "^2.4.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
