--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "deploy": "surge --project ./dist --domain questionable-frogs.surge.sh"
   },
   "dependencies": {
+    "@xkeshi/vue-countdown": "^1.0.1",
+    "bootstrap": "^4.1.3",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-drag-resize": "^1.3.2",
     "vue-typer": "^1.2.0"
