--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-drag-resize": "^1.3.2",
-    "vue-typer": "^1.2.0"
+    "vue-typer": "^1.2.0",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
